<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.jaundiceye.ui.home.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_article"
            app:destination="@id/navigation_article"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_recommendation"
        android:name="com.capstone.jaundiceye.ui.recommendation.RecommendationFragment"
        android:label="@string/nav_title_recommendation"
        tools:layout="@layout/fragment_recommendation" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.capstone.jaundiceye.ui.article.ArticleFragment"
        android:label="@string/nav_title_article"
        tools:layout="@layout/fragment_article" >
        <action
            android:id="@+id/action_navigation_article_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.jaundiceye.ui.profile.ProfileFragment"
        android:label="@string/nav_title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>