<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/brand"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/brand"
        app:layout_constraintStart_toStartOf="@+id/brand" />

    <!-- Card Jaundiceye -->
<!--    <androidx.cardview.widget.CardView-->
<!--        xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
<!--        android:id="@+id/cardIntro"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_marginVertical="10dp"-->
<!--        android:layout_marginHorizontal="32dp"-->
<!--        card_view:cardCornerRadius="8dp"-->
<!--        card_view:cardElevation="8dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->
<!--            android:padding="16dp">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/cek_dengan_ai"-->
<!--                android:textSize="14sp"-->
<!--                android:fontFamily="sans-serif-medium" />-->
<!--        </LinearLayout>-->
<!--    </androidx.cardview.widget.CardView>-->

    <!-- Card 1 -->
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="32dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cekPenyakitKuning"
                android:textSize="18sp"
                android:textColor="@color/french_blue"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subCekPenyakitKuning"
                android:textSize="14sp"
                android:textColor="@color/argentinian_blue"
                android:layout_marginVertical="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descCekPenyakitKuning"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/btnCek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCekPenyakitKuning"
                android:textAllCaps="false"
                android:background="@drawable/button_home"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:minHeight="0dp"
                android:minWidth="0dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 2 -->
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardRiwayat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="32dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cardCheck"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riwayat"
                android:textSize="18sp"
                android:textColor="@color/french_blue"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subRiwayat"
                android:textSize="14sp"
                android:textColor="@color/argentinian_blue"
                android:layout_marginVertical="4dp" />

            <Button
                android:id="@+id/btnRiwayat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRiwayat"
                android:textAllCaps="false"
                android:background="@drawable/button_home"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:minHeight="0dp"
                android:minWidth="0dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Card 3 -->
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardArtikel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="32dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cardRiwayat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artikel"
                android:textSize="18sp"
                android:textColor="@color/french_blue"
                android:fontFamily="sans-serif-medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subArtikel"
                android:textSize="14sp"
                android:textColor="@color/argentinian_blue"
                android:layout_marginVertical="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descArtikel"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/btnArtikel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnArtikel"
                android:textAllCaps="false"
                android:background="@drawable/button_home"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:minHeight="0dp"
                android:minWidth="0dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>