<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_recommendation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="32dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:paddingVertical="19dp">

        <TextView
            android:id="@+id/text_hospital_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hospital_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/french_blue"
            android:maxLines="1"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_doctor_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/argentinian_blue"
            android:layout_marginTop="12dp"
            android:maxLines="1"
            card_view:layout_constraintTop_toBottomOf="@id/text_hospital_name"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_hospital_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hospital_address"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/deep_blue"
            android:layout_marginTop="12dp"
            android:maxLines="2"
            card_view:layout_constraintTop_toBottomOf="@id/text_doctor_name"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"/>
        
        <Button
            android:layout_width="78dp"
            android:layout_height="26dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_button_recommendation"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:padding="0dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:includeFontPadding="false"
            android:background="@drawable/button_background"
            card_view:layout_constraintTop_toBottomOf="@id/text_hospital_address"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>