<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".ui.welcome.WelcomeActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome_title"
            android:textSize="36sp"
            android:textColor="@color/soft_yellow" />

        <TextView
            android:id="@+id/welcome_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/welcome_description"
            android:textSize="16sp"
            android:textColor="@color/anti_flash_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/welcome_button_login_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:padding="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:includeFontPadding="false"
                android:elevation="0dp"
                android:background="@drawable/button_welcome_background" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/manrope_bold"
                android:text="@string/welcome_button_register_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:padding="0dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:includeFontPadding="false"
                android:elevation="0dp"
                android:background="@drawable/button_welcome_background" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>